# JiPP2

./: README.md
Lab10/OperacjeNaPlikach/: CMakeLists.txt
Lab10/Szablony/: CMakeLists.txt
Lab10_1/csvLib/: CMakeLists.txt  library.cpp  library.h
Lab4/: CMakeLists.txt
Lab4/include/: Last.h  figura.h  funkcjaKwadratowa.h  kula.h  prostopadloscian.h  punkt.h  structs.h  student.h
Lab4/src/: Last.cpp  figura.cpp  funkcjaKwadratowa.cpp  kula.cpp  main.cpp  prostopadloscian.cpp  punkt.cpp  structs.cpp  student.cpp
Lab7/: CMakeLists.txt
Lab7/include/: Figura.h
Lab7/src/: Figura.cpp  main.cpp
Lab8/: CMakeLists.txt
Lab8/include/: Note.h
Lab8/src/: Note.cpp  main.cpp
Lab9/OdtwarzaczMuzyki/: CMakeLists.txt
Lab9/StopExample/: Line.cpp  Line.h  vExample.cpp
Lab9/ZamianaLiter/: CMakeLists.txt  main.cpp
WypozyczalniaFilmow/: .gitignore  CMakeLists.txt  Users.csv  filmsReviews.csv  rentalContent.csv
WypozyczalniaFilmow/Users/: Igorek.csv  Ihor.csv
WypozyczalniaFilmow/include/: Film.h  Recording.h  Rental.h  Review.h  Series.h  User.h  helpfulFunctions.h
WypozyczalniaFilmow/src/: Film.cpp  Recording.cpp  Rental.cpp  Review.cpp  Series.cpp  User.cpp  helpfulFunctions.cpp  main.cpp
allocation_basics/: CMakeLists.txt  main.cpp  zadania.cpp
allocation_basics/headers/: zadania.h
allocation_basics/simpleCalc/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt
firstLib/headers/: lib.h
firstLibCall/: CMakeLists.txt  main.cpp
lab_3/: CMakeLists.txt
lab_5/: CMakeLists.txt
lab_6/: CMakeLists.txt
lab_6/make/: lab_6  (+3 more)
simpleCalc/: CMakeLists.txt
(+38 files in other folders)
